Updated liquibase-core and liquibase-oracle to 4.24.0